--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -61,10 +61,9 @@
             <div class="h-6 w-px bg-slate-200 dark:bg-slate-700 mx-2 hidden md:block"></div>
 
             <button id="theme-toggle" class="p-2 rounded-md transition-all focus:outline-none
-                text-slate-500 hover:bg-slate-100 hover:text-slate-700
-                dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-yellow-400">
-                <i data-lucide="sun" class="w-5 h-5 hidden dark:block"></i>
-                <i data-lucide="moon" class="w-5 h-5 block dark:hidden"></i>
+                text-slate-500 hover:bg-slate-100
+                dark:text-yellow-300 dark:bg-slate-700 dark:border dark:border-slate-600 dark:hover:bg-slate-600 dark:hover:text-yellow-200">
+                <i id="theme-icon" data-lucide="moon" class="w-5 h-5"></i>
             </button>
         </div>
     </div>
